src/tests/snapshots/nyx__tests__window_opening__check_target_size@fsT-omT-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-maximized true\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]

post-map configures:
size: 1272 × 0, bounds: 1272 × 712, states: []
size: 1272 × 0, bounds: 1272 × 712, states: [Activated]
